[package]
name = "com_dll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security"
]

[profile.release]
codegen-units = 1                           # reduces binary size by ~2%
lto = true                                  # reduces binary size by ~14%
opt-level = "z"                             # reduces binary size by ~25%
panic = "abort"                             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
debug = "none"                              # disable debug information
split-debuginfo = "packed"                  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"                           # see split-debuginfo - allows us to drop the size by ~65%
incremental = false                         # no need to improve re-compile times
overflow-checks = false                     # disable integer overflow checks.
debug-assertions = false                    # dont enable extra debugging code
